--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Blank Website </title>
     </head>
     <body>
-        <h1>This website currently has no content. The next website by Caedmon Myers will go here soon.</h1>  
+        <h1>Hello</h1>  
     </body> 
 </div>
 
